@@ -13,6 +13,7 @@ Improvements:
 
    * Function to rotate an evas map with a quaternion: evas_map_util_quat_rotate().
    * EVAS_GL_NO_BLACKLIST env var to turn off blacklisted drivers in gl
+   * Evas gl enigne can do partial swaps now.
 
 Fixes:
 
